# BSUIRLabs

./: .gitignore  README.md
semestr1/OAiP/firstsemestr-OAiP-lab1/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab2/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab3/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab4/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab5/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab6/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab7/: README.md
semestr1/OAiP/firstsemestr-OAiP-lab8/: CMakeLists.txt  README.md
semestr1/OAiP/firstsemestr-OAiP-lab8/task1/: Change.cpp  Free.cpp  Init.cpp  README.md  Show.cpp  Sort.cpp  inputs.cpp  main.cpp  struct.h
semestr1/OAiP/firstsemestr-OAiP-lab8/task2/: Change.cpp  Destruct.cpp  Fiout.cpp  Init.cpp  README.md  Show.cpp  Struct.h  input.txt  main.cpp  output.txt
semestr1/OAiP/firstsemestr-OAiP-lab8/task3/: Change.cpp  README.MD  airwayclass.cpp  airwayclass.h  functions.h  inputs.cpp  main.cpp  show.cpp
semestr2/OAiP/Lab0/: CMakeLists.txt  README.md
semestr2/OAiP/Lab0/src/: main.cpp
semestr2/OAiP/Lab0/src/task1/: mouseobserver.cpp  mouseobserver.h  rotatwheel.cpp  rotatwheel.h  widgtask1.cpp  widgtask1.h
semestr2/OAiP/Lab0/src/task2/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  nagon.cpp  nagon.h  pacman.cpp  pacman.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.cpp  square.h  star.cpp  star.h  triangle.cpp  triangle.h  widgtask2.cpp  widgtask2.h
semestr2/OAiP/Lab1/firstLab/task3-4/: CMakeLists.txt  binaryoperation.h  check_equals.h  expression.h  main.cpp  number.h
semestr2/OAiP/Lab2/: README.md
semestr2/OAiP/Lab4/: CMakeLists.txt  main.cpp
semestr2/OAiP/Lab5/: README.md
semestr2/Programming/Lab1/: Отчёт.docx
semestr2/Programming/Lab2/: README.md
semestr2/Programming/Lab3/: README.md
semestr2/Programming/Lab4/: Airport.cs  Program.cs  README.md  Ticket.cs
semestr2/Programming/Lab5/: Airport.cs  Passenger.cs  Program.cs  README.md  Ticket.cs
semestr2/Programming/Lab6/: Car.cs  Coupe.cs  Program.cs  Tractor.cs
semestr2/Programming/Lab8/: Airport.cs  DiscountTariff.cs  ITariff.cs  NoDiscount.cs  Program.cs  Ticket.cs
semestr3/ISP/lab3/: Initilizer.cs  Program.cs
semestr3/ISP/lab4/: Program.cs
semestr3/ISP/lab7/: lab7.sln
semestr3/ISP/lab8/: lab8.sln
semestr4/OOP/: .gitignore  OOP.sln  README.md  todos.md
(+442 files in other folders)
