cmake_minimum_required(VERSION 3.15)
project(task34)
add_executable(task34 
                main.cpp
                expression.h
                # expression.cpp
                number.h
                # number.cpp
                binaryoperation.h
                # binaryoperation.cpp
                check_equals.h
                )   